[workspace]
members = ["packages/*"]
exclude = ["examples"]
resolver = "2"

[workspace.package]
authors = ["Biyard"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/biyard/rust-sdk"
description = "Biyard Rust Development Kit"

[workspace.dependencies]
by-macros = { path = "packages/by-macros", version = "*" }
dioxus-logger = { version = "0.5.0" }
serde_json = "1"
schemars = { version = "1", features = ["uuid1"] }
